Do not use BindingRuntimeHelpers.getYangModuleInfo()
YangModuleInfo is readily available from from RootMeta, use that instead
of reflection.

Change-Id: Ib46c3c08393de351d962ce6cae9fd0518702effd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>